2011-08-15  Mario Limonciello  <mario_limonciello@dell.com>
2011-08-15  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-probe.c (probe): Canonicalise the path argument, fixing
	use of "/path/.." as in grub-install for EFI as well as handling
	symlinks correctly.
	Fixes Debian bug #637768.

2011-08-15  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-probe.c: Remove duplicate #include.

2011-08-10  Robert Millan  <rmh@gnu.org>

	Detect LSI MegaRAID SAS (`mfi') devices on GNU/kFreeBSD.

	* util/deviceiter.c [__FreeBSD_kernel__] (get_mfi_disk_name): New
	function.
	[__FreeBSD_kernel__] (grub_util_iterate_devices): Scan for mfi
	(/dev/mfid[0-9]+) devices using get_mfi_disk_name().

2011-08-03  Robert Millan  <rmh@gnu.org>

	* include/grub/zfs/zap_leaf.h (typedef union zap_leaf_chunk): Mark
	la_array as packed.
	Reported by: Zachary Bedell

2011-07-26  Colin Watson  <cjwatson@ubuntu.com>

	* configure.ac: The Loongson port requires grub-mkfont due to its
	use of -DUSE_ASCII_FAILBACK.  Raise an error if it is not going to
	be built.

2011-07-26  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-install.in: Don't source grub-mkconfig_lib until after
	processing arguments (otherwise help2man fails when GRUB has not yet
	been installed).

2011-07-25  Vladimir Serbinenko  <phcoder@gmail.com>

	New script grub-mkstandalone.

	* Makefile.util.def (grub-mkstandalone): New script.
	* docs/man/grub-mkstandalone.h2m: New file.
	* util/grub-mkstandalone.in: Likewise.

2011-07-25  Vladimir Serbinenko  <phcoder@gmail.com>

	Support ATA disks with 4K sectors.

	* include/grub/ata.h (grub_ata): New member log_sector_size.
	* grub-core/disk/ata.c (grub_ata_dumpinfo): Show sector size.
	(grub_ata_identify): Read sector size.
	(grub_ata_readwrite): Use log_sector_size rather than hardcoded value.

2011-07-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Don't use uhci outside of x86.

2011-07-25  Vladimir Serbinenko  <phcoder@gmail.com>
