@@ -1,3 +1,10 @@
+2011-08-16  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	Don't accept text modes on EFI when booting Linux.
+
+	* grub-core/loader/i386/linux.c (ACCEPTS_PURE_TEXT): New define.
+	(grub_linux_boot) [!ACCEPTS_PURE_TEXT]: Restrict to graphics modes.
+
 2011-08-15  Mario Limonciello  <mario_limonciello@dell.com>
 2011-08-15  Colin Watson  <cjwatson@ubuntu.com>
 
